remove unused methods and increase coverage of repositories
also increase consistency